{
  "version": 4,
  "terraform_version": "0.14.2",
  "serial": 1186,
  "lineage": "0115f679-736e-4596-75de-d67004d1fea2",
  "resources": [
    {
      "module": "module.pipeline",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "devops-vpc-toh-internet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:120523844784:internet-gateway/igw-0d0b1b8b133b90d6e",
            "id": "igw-0d0b1b8b133b90d6e",
            "owner_id": "120523844784",
            "tags": {
              "Name": "devops-vpc-toh-internet-gateway"
            },
            "vpc_id": "vpc-0e2ceac323393a426"
          },
          "dependencies": [
            "module.pipeline.aws_vpc.devops-vpc-toh"
          ]
        }
      ]
    },
    {
      "module": "module.pipeline",
      "mode": "managed",
      "type": "aws_lb",
      "name": "devops-lb-toh-backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:120523844784:loadbalancer/app/devops-lb-toh-backend/d975c00116458a27",
            "arn_suffix": "app/devops-lb-toh-backend/d975c00116458a27",
            "dns_name": "devops-lb-toh-backend-1766445310.eu-west-3.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-3:120523844784:loadbalancer/app/devops-lb-toh-backend/d975c00116458a27",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "devops-lb-toh-backend",
            "security_groups": [
              "sg-0c4034d269517a56c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0abe89cef967bd253"
              },
              {
                "subnet_id": "subnet-0f167f2fee9b21670"
              }
            ],
            "subnets": [
              "subnet-0abe89cef967bd253",
              "subnet-0f167f2fee9b21670"
            ],
            "vpc_id": "vpc-0e2ceac323393a426",
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "dependencies": [
            "module.pipeline.aws_security_group.devops-lb-sg-toh-backend",
            "module.pipeline.aws_subnet.devops-vpc-toh-subnet-1",
            "module.pipeline.aws_subnet.devops-vpc-toh-subnet-2",
            "module.pipeline.aws_vpc.devops-vpc-toh"
          ]
        }
      ]
    },
    {
      "module": "module.pipeline",
      "mode": "managed",
      "type": "aws_lb",
      "name": "devops-lb-toh-frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:120523844784:loadbalancer/app/devops-lb-toh-frontend/0409563be3daa3f2",
            "arn_suffix": "app/devops-lb-toh-frontend/0409563be3daa3f2",
            "dns_name": "devops-lb-toh-frontend-390521970.eu-west-3.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-3:120523844784:loadbalancer/app/devops-lb-toh-frontend/0409563be3daa3f2",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "devops-lb-toh-frontend",
            "security_groups": [
              "sg-0f9b70df4467ab8ba"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0abe89cef967bd253"
              },
              {
                "subnet_id": "subnet-0f167f2fee9b21670"
              }
            ],
            "subnets": [
              "subnet-0abe89cef967bd253",
              "subnet-0f167f2fee9b21670"
            ],
            "vpc_id": "vpc-0e2ceac323393a426",
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "dependencies": [
            "module.pipeline.aws_security_group.devops-lb-sg-toh-frontend",
            "module.pipeline.aws_subnet.devops-vpc-toh-subnet-1",
            "module.pipeline.aws_subnet.devops-vpc-toh-subnet-2",
            "module.pipeline.aws_vpc.devops-vpc-toh"
          ]
        }
      ]
    },
    {
      "module": "module.pipeline",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "devops-lb-listener-toh-backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:120523844784:listener/app/devops-lb-toh-backend/d975c00116458a27/b3dc7bb2a95522f8",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:120523844784:targetgroup/devops-lb-tg-toh-backend/149720b4708782f0",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:120523844784:listener/app/devops-lb-toh-backend/d975c00116458a27/b3dc7bb2a95522f8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:120523844784:loadbalancer/app/devops-lb-toh-backend/d975c00116458a27",
            "port": 3000,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.pipeline.aws_lb.devops-lb-toh-backend",
            "module.pipeline.aws_lb_target_group.devops-lb-tg-toh-backend",
            "module.pipeline.aws_security_group.devops-lb-sg-toh-backend",
            "module.pipeline.aws_subnet.devops-vpc-toh-subnet-1",
            "module.pipeline.aws_subnet.devops-vpc-toh-subnet-2",
            "module.pipeline.aws_vpc.devops-vpc-toh"
          ]
        }
      ]
    },
    {
      "module": "module.pipeline",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "devops-lb-listener-toh-frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:120523844784:listener/app/devops-lb-toh-frontend/0409563be3daa3f2/42ece8e4451dce9c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:120523844784:targetgroup/devops-lb-tg-toh-frontend/eb95da11b2d1534d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:120523844784:listener/app/devops-lb-toh-frontend/0409563be3daa3f2/42ece8e4451dce9c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:120523844784:loadbalancer/app/devops-lb-toh-frontend/0409563be3daa3f2",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.pipeline.aws_lb.devops-lb-toh-frontend",
            "module.pipeline.aws_lb_target_group.devops-lb-tg-toh-frontend",
            "module.pipeline.aws_security_group.devops-lb-sg-toh-frontend",
            "module.pipeline.aws_subnet.devops-vpc-toh-subnet-1",
            "module.pipeline.aws_subnet.devops-vpc-toh-subnet-2",
            "module.pipeline.aws_vpc.devops-vpc-toh"
          ]
        }
      ]
    },
    {
      "module": "module.pipeline",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "devops-lb-tg-toh-backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:120523844784:targetgroup/devops-lb-tg-toh-backend/149720b4708782f0",
            "arn_suffix": "targetgroup/devops-lb-tg-toh-backend/149720b4708782f0",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:120523844784:targetgroup/devops-lb-tg-toh-backend/149720b4708782f0",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "devops-lb-tg-toh-backend",
            "port": 3000,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0e2ceac323393a426"
          },
          "dependencies": [
            "module.pipeline.aws_vpc.devops-vpc-toh"
          ]
        }
      ]
    },
    {
      "module": "module.pipeline",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "devops-lb-tg-toh-frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:120523844784:targetgroup/devops-lb-tg-toh-frontend/eb95da11b2d1534d",
            "arn_suffix": "targetgroup/devops-lb-tg-toh-frontend/eb95da11b2d1534d",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:120523844784:targetgroup/devops-lb-tg-toh-frontend/eb95da11b2d1534d",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "devops-lb-tg-toh-frontend",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0e2ceac323393a426"
          },
          "dependencies": [
            "module.pipeline.aws_vpc.devops-vpc-toh"
          ]
        }
      ]
    },
    {
      "module": "module.pipeline",
      "mode": "managed",
      "type": "aws_route",
      "name": "devops-vpc-route-table-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d0b1b8b133b90d6e",
            "id": "r-rtb-00b13450f7e44d9aa1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00b13450f7e44d9aa",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.pipeline.aws_internet_gateway.devops-vpc-toh-internet-gateway",
            "module.pipeline.aws_vpc.devops-vpc-toh"
          ]
        }
      ]
    },
    {
      "module": "module.pipeline",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "devops-lb-sg-toh-backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:120523844784:security-group/sg-0c4034d269517a56c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c4034d269517a56c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "devops-lb-sg-toh-backend",
            "name_prefix": null,
            "owner_id": "120523844784",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0e2ceac323393a426"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.pipeline.aws_vpc.devops-vpc-toh"
          ]
        }
      ]
    },
    {
      "module": "module.pipeline",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "devops-lb-sg-toh-frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:120523844784:security-group/sg-0f9b70df4467ab8ba",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f9b70df4467ab8ba",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "devops-lb-sg-toh-frontend",
            "name_prefix": null,
            "owner_id": "120523844784",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0e2ceac323393a426"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.pipeline.aws_vpc.devops-vpc-toh"
          ]
        }
      ]
    },
    {
      "module": "module.pipeline",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "devops-service-sg-toh-backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:120523844784:security-group/sg-0e21c3ca63d82912d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e21c3ca63d82912d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "devops-service-sg-toh-backend",
            "name_prefix": null,
            "owner_id": "120523844784",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0e2ceac323393a426"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.pipeline.aws_vpc.devops-vpc-toh"
          ]
        }
      ]
    },
    {
      "module": "module.pipeline",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "devops-service-sg-toh-frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:120523844784:security-group/sg-0051495896f2c56f4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0051495896f2c56f4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "devops-service-sg-toh-frontend",
            "name_prefix": null,
            "owner_id": "120523844784",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0e2ceac323393a426"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.pipeline.aws_vpc.devops-vpc-toh"
          ]
        }
      ]
    },
    {
      "module": "module.pipeline",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "devops-vpc-toh-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:120523844784:subnet/subnet-0abe89cef967bd253",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0abe89cef967bd253",
            "map_public_ip_on_launch": false,
            "owner_id": "120523844784",
            "tags": {
              "Name": "devops-vpc-toh-subnet-1"
            },
            "vpc_id": "vpc-0e2ceac323393a426"
          },
          "dependencies": [
            "module.pipeline.aws_vpc.devops-vpc-toh"
          ]
        }
      ]
    },
    {
      "module": "module.pipeline",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "devops-vpc-toh-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:120523844784:subnet/subnet-0f167f2fee9b21670",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0f167f2fee9b21670",
            "map_public_ip_on_launch": false,
            "owner_id": "120523844784",
            "tags": {
              "Name": "devops-vpc-toh-subnet-2"
            },
            "vpc_id": "vpc-0e2ceac323393a426"
          },
          "dependencies": [
            "module.pipeline.aws_vpc.devops-vpc-toh"
          ]
        }
      ]
    },
    {
      "module": "module.pipeline",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "devops-vpc-toh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:120523844784:vpc/vpc-0e2ceac323393a426",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a4cf9d61d0a283dc",
            "default_route_table_id": "rtb-00b13450f7e44d9aa",
            "default_security_group_id": "sg-0f357e23ab9b758fd",
            "dhcp_options_id": "dopt-68d92800",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e2ceac323393a426",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00b13450f7e44d9aa",
            "owner_id": "120523844784",
            "tags": {
              "Name": "devops-vpc-toh"
            }
          }
        }
      ]
    }
  ]
}